--- a/lvgl_tft/Kconfig
+++ b/lvgl_tft/Kconfig
@@ -3,6 +3,14 @@
 
 menu "LVGL TFT Display controller"
 
+    config LV_HOR_RES_MAX
+        int "Maximal horizontal resolution to support by the library."
+        default 480
+
+    config LV_VER_RES_MAX
+        int "Maximal vertical resolution to support by the library."
+        default 320
+
     # Predefined display configurations for multiple
     # evaluation/development boards.
     choice LV_PREDEFINED_DISPLAY
@@ -291,6 +299,7 @@ menu "LVGL TFT Display controller"
         bool "ST7789"
             select LV_TFT_DISPLAY_CONTROLLER_ST7789
             select LV_TFT_DISPLAY_PROTOCOL_SPI
+            select LV_TFT_DISPLAY_OFFSETS
     config LV_TFT_DISPLAY_USER_CONTROLLER_ST7796S
         bool "ST7796S"
             select LV_TFT_DISPLAY_CONTROLLER_ST7796S
